--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="hamburgermenu">
-              <a class="navbar-brand col-lg-3 me-0" href="#">VTECH</a>
+              <a class="navbar-brand col-lg-3 me-0" href="index.html">VTECH</a>
               <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Prices</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#service">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#price">Prices</a></li>
+                <li class="nav-item"><a class="nav-link" href="#project">Projects</a></li>
               </ul>
 
               <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                <a class="btn btn-info" href="#">Get In Touch</a>
+                <a class="btn btn-info" href="contact">Get In Touch</a>
               </div>
 
             </div>
@@ -70,7 +70,7 @@
     <main class="p-4">
         <!-- services section -->
         <div class="container px-4 py-5" id="hanging-icons">
-            <h2 class="pb-2 border-bottom">Services</h2>
+            <h2 id="service" class="pb-2 border-bottom">Services</h2>
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                 <div class="col d-flex align-items-start">
                     <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
@@ -108,7 +108,7 @@
         
          <!-- pricing header -->
         <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-            <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
+            <h2 id="price" class="display-4 fw-normal text-body-emphasis">Pricing</h2>
             <p class="fs-5 text-body-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus tempore harum dolorum fugiat rerum cum, reprehenderit ab voluptatem sint eos laborum cupiditate delectus ad voluptatum!</p>
         </div>
 
@@ -183,7 +183,8 @@
          </div>
 
          <!-- compare plans -->
-         <h2 class="display-6 text-center mb-4">Compare plans</h2>
+         <h2 class="display-6 text-center fw-normal text-body-emphasis mb-4">Compare plans</h2>
+         
          <div class="table-responsive">
              <table class="table text-center">
              <thead>
@@ -366,21 +367,21 @@
                     <div class="col-lg-5">
                         <h5 class="fw-semibold mb-3">Contact Information</h5>
                         <p class="text-secondary mb-4">
-                        I’m always open to discussing new opportunities or creative ideas.
+                        I'm always open to discussing new opportunities or creative ideas.
                         </p>
 
                         <ul class="list-unstyled">
                         <li class="mb-3 d-flex align-items-center">
                             <i class="bi bi-envelope-fill text-info me-3 fs-5"></i>
-                            <span>valentine@example.com</span>
+                            <span>vtechs2024@gmail.com</span>
                         </li>
                         <li class="mb-3 d-flex align-items-center">
                             <i class="bi bi-telephone-fill text-info me-3 fs-5"></i>
-                            <span>+234 800 000 0000</span>
+                            <span>+234 806 857 6871</span>
                         </li>
                         <li class="mb-3 d-flex align-items-center">
                             <i class="bi bi-geo-alt-fill text-info me-3 fs-5"></i>
-                            <span>Lagos, Nigeria</span>
+                            <span>Port-Harcourt, Nigeria</span>
                         </li>
                         </ul>
                     </div>
@@ -401,9 +402,7 @@
                                         rows="5" placeholder="Your Message" required></textarea>
                                 </div>
                                 <div class="col-12 text-end">
-                                <button type="submit" class="btn btn-info btn-lg rounded-pill px-4">
-                                    Send Message
-                                </button>
+                                    <button type="submit" class="btn btn-info btn-lg rounded px-4">Send Message</button>
                                 </div>
                             </div>
                         </form>
