--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </ul>
 
               <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                <a class="btn btn-info" href="contact">Get In Touch</a>
+                <a class="btn btn-info" href="#contact">Get In Touch</a>
               </div>
 
             </div>
