updated project files

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <div class="card-body">
                             <h5 class="card-title fw-semibold">Portfolio Website</h5>
                             <p class="card-text text-muted mb-0">
-                            A personal portfolio built with HTML, CSS, and Bootstrap showcasing my work and skills.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo et dolorem atque architecto porro.
                             </p>
                         </div>
                         </div>
@@ -275,9 +275,9 @@
                                 </div>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">E-Commerce Template</h5>
+                                <h5 class="card-title fw-semibold">Modern Workspace</h5>
                                 <p class="card-text text-muted mb-0">
-                                A modern e-commerce front-end built with Bootstrap 5 and custom JavaScript features.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo et dolorem atque architecto porro.
                                 </p>
                             </div>
                         </div>
@@ -292,9 +292,9 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title fw-semibold">Weather App</h5>
+                            <h5 class="card-title fw-semibold">Travel Agency</h5>
                             <p class="card-text text-muted mb-0">
-                            A responsive weather app that fetches live data using a public API and Bootstrap UI.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo et dolorem atque architecto porro.
                             </p>
                         </div>
                         </div>
@@ -309,9 +309,9 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title fw-semibold">Weather App</h5>
+                            <h5 class="card-title fw-semibold">Gym House</h5>
                             <p class="card-text text-muted mb-0">
-                            A responsive weather app that fetches live data using a public API and Bootstrap UI.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo et dolorem atque architecto porro.
                             </p>
                         </div>
                         </div>
@@ -326,9 +326,9 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title fw-semibold">Weather App</h5>
+                            <h5 class="card-title fw-semibold">Insurance Landing Page</h5>
                             <p class="card-text text-muted mb-0">
-                            A responsive weather app that fetches live data using a public API and Bootstrap UI.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo et dolorem atque architecto porro.
                             </p>
                         </div>
                         </div>
@@ -343,9 +343,9 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title fw-semibold">Weather App</h5>
+                            <h5 class="card-title fw-semibold">Clinic Landing Page</h5>
                             <p class="card-text text-muted mb-0">
-                            A responsive weather app that fetches live data using a public API and Bootstrap UI.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo et dolorem atque architecto porro.
                             </p>
                         </div>
                         </div>
